--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#about">About</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="#contact">Contact</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </nav>
@@ -56,7 +56,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>Contact No : <a href="tel: +9198659****59">+97290****4</a></p>
+                        <!-- <p>Contact No : <a href="tel: +9198659****59">+97290****4</a></p> -->
                     </div>
                     <div class="col-lg-6">
                         <div class="social">
@@ -79,8 +79,8 @@
                     <div class="col-lg-6 align-item-center">
                         <div class="home-info">
                             <h1>Alone we can do little, together we can do so much</h1>
-                            <h2>We <span>Code Convent foundation</span> manage wastage for needy peoples</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nobis voluptates modi.</p>
+                            <h2>We <span>Code Convent foundation</span> manage donation for needy peoples</h2>
+                            <p>More donations increase our potential.</p>
                             <div class="buttons">
                                 <button class="btn1 donate-paypal" class="btn1">Donate with PayPal</button>
                                 <button class="btn1 donate-blockchain" class="btn1">Donate with Blockchain</button>
@@ -100,14 +100,14 @@
     <section class="don-sec" id="donation">
         <div class="container">
             <div class="heading">
-                <h2>We Manage Wastage or Donation like..</h2>
+                <h2>We Manage Donation like..</h2>
             </div>
             <div class="row">
                 <div class="col-lg-4">
                     <div class="don-box">
                         <img src="img/don/clothing.png" alt="img">
                         <h3>Clothes</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>We request donations to buy clothes for war-affected children</p>
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
@@ -119,7 +119,7 @@
                     <div class="don-box">
                         <img src="img/don/sneakers.png" alt="img">
                         <h3>Footware</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>We request donations to buy Footware for war-affected children</p>
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
@@ -131,7 +131,7 @@
                     <div class="don-box">
                         <img src="img/don/salary.png" alt="img">
                         <h3>Fund</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>We request cash donations to give to affected parents to help them with life expenses</p>
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
@@ -143,7 +143,7 @@
                     <div class="don-box">
                         <img src="img/don/gadgets.png" alt="img">
                         <h3>Gadgets</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>We request donations to buy Gadgets for war-affected children for entertainment</p>
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
@@ -155,7 +155,7 @@
                     <div class="don-box">
                         <img src="img/don/shopping-bag.png" alt="img">
                         <h3>Food</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>We request donations to buy healthy food for war-affected children</p>
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
@@ -167,7 +167,7 @@
                     <div class="don-box">
                         <img src="img/don/book.png" alt="img">
                         <h3>Stationary</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>We request donations to buy Stationary for war-affected children to help them read</p>
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
@@ -180,22 +180,32 @@
         <div class="container">
             <div class="heading">
                 <h2>Our Missions</h2>
-                <p>We have delivered <span>Wastage</span> or <span>Donations</span> to needy Peoples</p>
+                <p>We have delivered <span>Donations</span> to needy Peoples</p>
             </div>
             <div class="gallery-sec">
                 <div class="container">
                     <div class="image-container">
-                        <div class="image"><img src="img/miss/1.jpg" alt="img"></div>
-                        <div class="image"><img src="img/miss/2.jpg" alt="img"></div>
-                        <div class="image"><img src="img/miss/3.jpg" alt="img"></div>
-                        <div class="image"><img src="img/miss/4.jpg" alt="img"></div>
-                        <div class="image"><img src="img/miss/5.jpg" alt="img"></div>
-                        <div class="image"><img src="img/miss/6.jpg" alt="img"></div>
+                        <div class="image"><img src="img/miss/1.jpeg" alt="img"></div>
+                        <div class="image"><img src="img/miss/2.jpeg" alt="img"></div>
+                        <div class="image"><img src="img/miss/3.jpeg" alt="img"></div>
+                        <div class="video"><video src="img/miss/4.mp4" muted></video></div>
+                        <div class="video"><video src="img/miss/5.mp4" muted></video></div>
+                        <div class="video"><video src="img/miss/6.mp4" muted></video></div>
+
+                        <!-- <div class="image"><img src="img/miss/6.jpeg" alt="img"></div> -->
+                        <!-- <div class="video"><video src="img/miss/8.mp4" muted>d;l</video></div> -->
+                
+
+                   
                     </div>
                 </div>
                 <div class="pop-image">
                     <span>&times;</span>
                     <img src="img/gallery/1.jpg" alt="gallery-img">
+                </div>
+                <div class="pop-video">
+                    <span>&times;</span>
+                    <div class="video"><video src="img/miss/4.mp4" muted autoplay controls></video></div>
                 </div>
                 </di v>
             </div>
@@ -211,19 +221,15 @@
                     <div class="heading">
                         <h2>What We Do & Why We Do</h2>
                     </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur voluptatibus voluptatem
-                        neque, dicta architecto minima amet suscipit deserunt delectus cumque ea excepturi fuga alias,
-                        labore eaque placeat facere impedit quia? </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae aspernatur totam, perferendis
-                        deleniti natus voluptatum. Distinctio consequuntur eum facilis et? Amet vero soluta distinctio
-                        veniam eveniet? Corrupti laborum ex nobis.</p>
+                    <p>It opened a fundraising site for relief for those affected by Gaza's recent conflict. Families in Gaza have suffered greatly, losing their homes and loved ones. We aim to provide food, shelter and medical assistance to those in need, and every donation helps. </p>
+                    <p>Even a small contribution can make a positive impact and show support for Gazans during this difficult time. We urge you to join us in providing relief and donate now to make a difference in the lives of those affected.</p>
                 </div>
             </div>
         </div>
     </section>
 
         <!-- Contact Section -->
-        <section class="contact-section" id="contact">
+        <!-- <section class="contact-section" id="contact">
             <div class="container">
                 <div class="heading">
                     <h2>Connect With Us</h2>
@@ -279,7 +285,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
     <footer>
         <div class="container">
@@ -289,7 +295,7 @@
                     <div class="col-one">
                         <h4>Code Convent foundation</h4>
                         <p>Address : 3, Gaza, Palestan </p>
-                        <p>Contact No : <a href="tel: +972 98659****59">+97290****4</a></p>
+                        <!-- <p>Contact No : <a href="tel: +972 98659****59">+97290****4</a></p> -->
                         <p>Email : <a href="mailto:foundation@code.com">foundation@code.com</a></p>
                     </div>
                 </div>
@@ -301,7 +307,7 @@
                             <li><a href="#donation">Donations</a></li>
                             <li><a href="#mission-id">Missions</a></li>
                             <li><a href="#about">About us</a></li>
-                            <li><a href="#contact">Contact us</a></li>
+                            <!-- <li><a href="#contact">Contact us</a></li> -->
                         </ul>
                     </div>
                 </div>
